Simplifies project HTML & reset exercise files.

--- a/project/index.html
+++ b/project/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+
 		<title>Your Name | Job Title or Tagline</title>
 		
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<!-- PUT THE STYLESHEET LINK HERE -->
-		<link rel="stylesheet" href="css/styles.css">
+
 	</head>
 	<body>
 
@@ -19,20 +20,8 @@
 		</header>
 
 
-		<!-- NAVIGATION MENU -->
-		<!-- <nav>
-			<ul>
-				<li><a href="#profile" alt="about me link">About Me</a></li>
-				<li><a href="#workExperience" alt="work experience link">Work Experience</a></li>
-				<li><a href="#skills" alt="skills link">Skills</a></li>
-				<li><a href="#education" alt="education link">Education</a></li>
-				<li><a href="#contact" alt="contact link">Contact Info</a></li>
-			</ul>
-		</nav> -->
-
-
 		<!-- ABOUT ME / PROFILE -->
-		<section class="profile" id="profile">
+		<section class="profile">
 			<div class="content-wrap clearfix">
 				<img class="profile-image" src="images/doggy.jpg" alt="">
 				<div class="summary">
@@ -46,15 +35,15 @@
 
 
 		<!-- WORK EXPERIENCE -->
-		<section class="work-experience" id="workExperience">
+		<section class="work-experience">
 			<div class="content-wrap">
 				<h2>Work Experience</h2>
 
-				<div class="item clearfix">
+				<div class="item">
 
 					<div class="details">
 						<h4 class="company">Company Name</h4>
-						<h3>Job title 1</h3>
+						<h3>Job title</h3>
 						<p class="date">July 2014 - Present</p>
 					</div>
 					<div class="description">
@@ -63,22 +52,20 @@
 
 				</div>
 
-				<div class="item clearfix">
-
+				<div class="item">
 					<div class="details">
-						<h4 class="company">Company Name</h4>
+						<h4 class="company">Another Company</h4>
 						<h3>Job title</h3>
 						<p class="date">September 2012 - Present</p>
 					</div>
 					<div class="description">
 						<p>Macchiato aromatic so as, cinnamon sit redeye in doppio trifecta. Latte blue mountain, cappuccino kopi-luwak, doppio irish body mazagran body. Skinny redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
 					</div>
-
 				</div>
 
-				<div class="item clearfix">
+				<div class="item">
 					<div class="details">
-						<h4 class="company">Company Name</h4>
+						<h4 class="company">Company Three</h4>
 						<h3>Job Title</h3>
 						<p class="date">March 2013 - February 2014</p>
 					</div>
@@ -98,7 +85,7 @@
 
 
 		<!-- SKILLS -->
-		<section class="skills" id="skills">
+		<section class="skills">
 			<div class="content-wrap">
 				<h2>Skills</h2>
 
@@ -127,22 +114,12 @@
 						</ul>
 					</div>				
 				</div>
-
-				<!-- <div class="skills-circles">
-					<h3>Circle Option / Title</h3>
-					<ul>
-						<li><span>Social Media</span></li>
-						<li><span>Marketing Strategy</span></li>
-						<li><span>Brand Identity</span></li>
-						<li><span>Graphic Design</span></li>
-					</ul>
-				</div> -->
 			</div>
 		</section>
 
 
 		<!-- EDUCATION -->
-		<section class="education" id="education">
+		<section class="education">
 			<div class="content-wrap">
 				<h2>Education</h2>
 
@@ -151,16 +128,11 @@
 					<h4>Designation or Degree</h4>
 					<p>Description and/or awards. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate voluptas architecto asperiores, natus qui quod suscipit quae, dolorum. Provident minus doloremque a deserunt quam saepe error quibusdam explicabo, possimus aliquam.</p>
 				</div>
-				<div class="item">
-					<h3>College or University, 2005</h3>
-					<h4>Designation or Degree</h4>
-					<p>Description and/or awards. Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-				</div>
 			</div>
 		</section>
 
 		<!-- CONTACT INFO -->
-		<section class="contact" id="contact">
+		<section class="contact">
 			<div class="content-wrap clearfix">
 				<h2>Let's keep in touch!</h2>
 
