--- a/project/final.html
+++ b/project/final.html
@@ -3,35 +3,27 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Your Name Here | Job Title or Tagline</title>
+		<title>Your Name | Job Title or Tagline</title>
 		
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600|Merriweather|Pacifico' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/final-styles.css">
+
+		<!-- PUT THE STYLESHEET LINK HERE -->
+		<link rel="stylesheet" href="css/final.css">
 	</head>
 	<body>
+
 		<!-- HEADER -->
 		<header>
-			<a class="download" href="resume.pdf" download>Download resume (pdf)</a>
-			<h1>Your Name</h1>
+			<h1>Your Name Here</h1>
 			<h2>Job Title or Tagline</h2>
 		</header>
 
-		<nav>
-			<ul>
-				<li><a href="#profile" alt="about me link">About Me</a></li>
-				<li><a href="#workExperience" alt="work experience link">Work Experience</a></li>
-				<li><a href="#skills" alt="skills link">Skills</a></li>
-				<li><a href="#education" alt="education link">Education</a></li>
-				<li><a href="#contact" alt="contact link">Contact Info</a></li>
-			</ul>
-		</nav>
 
 		<!-- ABOUT ME / PROFILE -->
-		<section class="profile" id="profile">
+		<section class="profile">
 			<div class="content-wrap clearfix">
-					<img class="profile-image" src="images/profile-generic.jpg" alt="Christina Truong">
+				<img class="profile-image" src="images/doggy.jpg" alt="">
 				<div class="summary">
 					<h2>Hello!</h2>
 					<p>[Profile summary here] Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis laboriosam officia blanditiis tempora sit fugiat molestiae iusto impedit ipsa cum, asperiores laborum, esse, doloribus explicabo! Autem, distinctio provident itaque non.</p>
@@ -43,11 +35,11 @@
 
 
 		<!-- WORK EXPERIENCE -->
-		<section class="work-experience" id="workExperience">
+		<section class="work-experience">
 			<div class="content-wrap">
 				<h2>Work Experience</h2>
 
-				<div class="item clearfix">
+				<div class="item">
 
 					<div class="details">
 						<h4 class="company">Company Name</h4>
@@ -60,22 +52,20 @@
 
 				</div>
 
-				<div class="item clearfix">
-
+				<div class="item">
 					<div class="details">
-						<h4 class="company">Company Name</h4>
+						<h4 class="company">Another Company</h4>
 						<h3>Job title</h3>
 						<p class="date">September 2012 - Present</p>
 					</div>
 					<div class="description">
 						<p>Macchiato aromatic so as, cinnamon sit redeye in doppio trifecta. Latte blue mountain, cappuccino kopi-luwak, doppio irish body mazagran body. Skinny redeye eu turkish, carajillo, skinny cultivar trifecta decaffeinated et cortado crema. Affogato pumpkin spice half and half, beans, cortado brewed foam percolator java.</p>
 					</div>
-
 				</div>
 
-				<div class="item clearfix">
+				<div class="item">
 					<div class="details">
-						<h4 class="company">Company Name</h4>
+						<h4 class="company">Company Three</h4>
 						<h3>Job Title</h3>
 						<p class="date">March 2013 - February 2014</p>
 					</div>
@@ -93,55 +83,43 @@
 			</div>
 		</section>
 
+
 		<!-- SKILLS -->
-		<section class="skills" id="skills">
+		<section class="skills">
 			<div class="content-wrap">
 				<h2>Skills</h2>
 
 				<div class="skills-list clearfix">
-					<h3>List Option / Title</h3>
-
 					<div class="columns">
-						<h4>Best at:</h4>
+						<h3>Best at:</h3>
 						<ul>
-							<li><i class="fa fa-check"></i> HTML / HTML5</li>
-							<li><i class="fa fa-check"></i> CSS / CSS3</li>
+							<li><i class="fa fa-check"></i> HTML5 / CSS3</li>
 							<li><i class="fa fa-check"></i> Less / Sass</li>
 							<li><i class="fa fa-check"></i> JavaScript / jQuery</li>
 						</ul>
 					</div>
 					<div class="columns">
-						<h4>Worked with:</h4>
+						<h3>Worked with:</h3>
 						<ul>
 							<li><i class="fa fa-check"></i> Wordpress</li>
 							<li><i class="fa fa-check"></i> PHP</li>
-							<li><i class="fa fa-check"></i> Processing</li>
+							<li><i class="fa fa-check"></i> Another Thing</li>
 						</ul>
 					</div>
 					<div class="columns">
-						<h4>Learning:</h4>
+						<h3>Learning:</h3>
 						<ul>
-							<li><i class="fa fa-check"></i> angular.js</li>	
-							<li><i class="fa fa-check"></i> Stylus</li>	
+							<li><i class="fa fa-check"></i> Topic</li>	
+							<li><i class="fa fa-check"></i> Something Else</li>	
 						</ul>
 					</div>				
-				</div>
-
-				<div class="skills-circles">
-					<h3>Circle Option / Title</h3>
-					<ul>
-						<li><span>Social Media</span></li>
-						<li><span>Marketing Strategy</span></li>
-						<li><span>Brand Identity</span></li>
-						<li><span>Graphic Design</span></li>
-					</ul>
 				</div>
 			</div>
 		</section>
 
 
 		<!-- EDUCATION -->
-		<section class="education" id="education">
+		<section class="education">
 			<div class="content-wrap">
 				<h2>Education</h2>
 
@@ -150,16 +128,11 @@
 					<h4>Designation or Degree</h4>
 					<p>Description and/or awards. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate voluptas architecto asperiores, natus qui quod suscipit quae, dolorum. Provident minus doloremque a deserunt quam saepe error quibusdam explicabo, possimus aliquam.</p>
 				</div>
-				<div class="item">
-					<h3>College or University, 2005</h3>
-					<h4>Designation or Degree</h4>
-					<p>Description and/or awards. Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-				</div>
 			</div>
 		</section>
 
 		<!-- CONTACT INFO -->
-		<section class="contact" id="contact">
+		<section class="contact">
 			<div class="content-wrap clearfix">
 				<h2>Let's keep in touch!</h2>
 
